Fix page link collapse

--- a/static/public/css/index.css
+++ b/static/public/css/index.css
@@ -2528,13 +2528,13 @@ details.dropdown::marker {
   }
 }
 
-.page-link.collapse {
+.page-link.page-link-collapse {
   cursor: default;
   --tw-bg-opacity: 1;
   background-color: rgb(248 250 252 / var(--tw-bg-opacity));
 }
 
-.dark .page-link.collapse {
+.dark .page-link.page-link-collapse {
   --tw-bg-opacity: 1;
   background-color: rgb(63 63 70 / var(--tw-bg-opacity));
 }
